fixed setting.php cta button and horizontal scroll

--- a/css/scss/settings.scss
+++ b/css/scss/settings.scss
@@ -111,6 +111,9 @@ header {
       a {
         border: 1px solid $brand_color;
         border-radius: 8px;
+        display: inline-block;
+        width: 150px;
+
       }
     }
   }
